# midal

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.midal  Kconfig.midal_usbd  LICENSE  NOTICE  README.md  VERSION  app.overlay  pm_static_promicro_nrf52840_nrf52840_uf2.yml  prj.conf  resistance-diag.txt
boards/: promicro_nrf52840_nrf52840_uf2.overlay
hardware/: README.md
src/: main.c  midal_conf.h  zbus_channels.c  zbus_channels.h
src/diag/: heartbeat.c  heartbeat.h  saadc_selftest.c  saadc_selftest.h  stats.c  stats.h  stats_listener.c  stats_listener.h
src/midi/: midi_codec.c  midi_codec.h  midi_router.c  midi_router.h  midi_types.h
src/pedal/: pedal.c  pedal.h  pedal_filter.c  pedal_filter.h  pedal_reader.c  pedal_reader.h  pedal_sampler.c  pedal_sampler.h  pedal_sampler_thread.c  pedal_sampler_thread.h  pedal_timer.h
src/transports/: transport_ble_midi.c  transport_ble_midi.h  transport_usb_midi.c  transport_usb_midi.h
src/usbd/: midi.c  midi.h  usbd.c  usbd.h
